取消了首页GitHub按钮，添加了导航栏

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-  <nav>
-    <a href="mailto:493960474@qq.com">Email</a>
-  </nav>
   <div id="app"></div>
   <script>
     window.$docsify = {
@@ -23,7 +20,7 @@
       nameLink: '#/', // 点击文档标题后跳转的链接地址，“/”代表首页
       // logo: '/_media/icon.svg', // 在侧边栏中出现的网站图标，你可以使用CSS来更改大小
       relativePath: true, // 启用相对路径，默认为true
-      // loadNavbar: true, // 启用导航栏，默认为false
+      loadNavbar: true, // 启用导航栏，默认为false
       coverpage: true, // 启用封面，默认为false
       auto2top: true, // 滚动到顶部，默认为false
       loadSidebar: true, // 启用侧边栏，默认为false
